// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render Input and error message correctly with errorMsg 1`] = `
<div>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Put your text here."
    type="text"
    value="this input value"
  />
  <p>
    error message
  </p>
</div>
`;

exports[`Input should render Input correctly with test data 1`] = `
<div>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Put your text here."
    type="text"
    value="this input value"
  />
</div>
`;

exports[`Input should render Input correctly without non-required data 1`] = `
<div>
  <input
    onBlur={null}
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;
